--- a/rest-api/package.json
+++ b/rest-api/package.json
@@ -17,6 +17,7 @@
     "@credo-ts/core": "^0.6.0-alpha-20250314154406",
     "@credo-ts/didcomm": "^0.6.0-alpha-20250314154406",
     "@credo-ts/node": "^0.6.0-alpha-20250314154406",
+    "@credo-ts/tenants": "^0.6.0-alpha-20250314154406",
     "@openwallet-foundation/askar-nodejs": "^0.3.1",
     "@openwallet-foundation/askar-shared": "^0.3.1",
     "@types/express": "^5.0.0",
