--- a/rest-api/package.json
+++ b/rest-api/package.json
@@ -22,6 +22,7 @@
     "@openwallet-foundation/askar-shared": "^0.3.1",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.10",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
